--- a/Web/style.scss
+++ b/Web/style.scss
@@ -1,7 +1,8 @@
-@import "./Components/variable";
+@import "./components/variable";
 
-@import "./Components/header";
+@import "./components/header";
 
-@import "./Components/main";
+@import "./components/main";
 
-@import "./Components/footer";
+@import "./components/footer";
+
