correcciones en alt de imagenes

--- a/Web/components/_header.scss
+++ b/Web/components/_header.scss
@@ -1,5 +1,6 @@
 .nav-logo {
   max-width: 80%;
+  color: white;
 }
 
 .texto-blanco {
@@ -36,11 +37,12 @@ header {
 
 .nav-item {
   margin: 0 7px;
-  
+  color: white;
 }
 
 .nav-item:hover {
   text-decoration: none;
+  color: white;
 }
 
 .logo {
@@ -50,6 +52,7 @@ header {
 
 nav {
     width: 100%;
+    color: white;
 }
 
 .a-anchor {
